--- a/msmc_amazilia/Readme
+++ b/msmc_amazilia/Readme
@@ -1,1 +1,1 @@
-##This is an attempt to run msmc on one scaffold of Calypte Anna reference genome, using a cyanocephala individuals from Alamikamba and Mogoton. 
+##This is an attempt to run msmc bam files aligned to Calypte Anna reference genome, using a cyanocephala individuals from Alamikamba and Mogoton. 
